--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MensajeController.cs" />
     <Compile Include="Controllers\NoticiaController.cs" />
+    <Compile Include="Controllers\NotificacionUsuarioController.cs" />
     <Compile Include="Controllers\ProyectoController.cs" />
     <Compile Include="Controllers\RecuerdoController.cs" />
     <Compile Include="Controllers\ServicioController.cs" />
@@ -346,6 +347,8 @@
     <Content Include="Views\Recuerdo\VistaUsuario\Editar.cshtml" />
     <Content Include="Views\Servicio\VistaUsuario\Detalles.cshtml" />
     <Content Include="Views\Servicio\VistaUsuario\ServiciosDisponibles.cshtml" />
+    <Content Include="Views\NotificacionUsuario\MisNotificaciones.cshtml" />
+    <Content Include="Views\NotificacionUsuario\NoLeidas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
